[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu/Wall_paper-2.png.png" type="Texture" id=1]
[ext_resource path="res://Menu/Level_select.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=10]
size = 100
font_data = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.203922, 0.960784, 0.533333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.203922, 0.960784, 0.533333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = -1365.0
margin_top = -784.0
margin_right = 1341.0
margin_bottom = 820.0

[node name="Sprite" type="Sprite" parent="Panel"]
modulate = Color( 1, 1, 1, 0.788235 )
position = Vector2( 1391, 909 )
scale = Vector2( 3.66406, 2.40312 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2.5, 2.5 )

[node name="Mage" type="Button" parent="."]
margin_left = -943.0
margin_top = -580.0
margin_right = -363.0
margin_bottom = -399.0
custom_fonts/font = SubResource( 1 )
text = "Mage"

[node name="Knight" type="Button" parent="."]
margin_left = -297.0
margin_top = -580.0
margin_right = 283.0
margin_bottom = -399.0
custom_fonts/font = SubResource( 1 )
text = "Knight"

[node name="Dragon" type="Button" parent="."]
margin_left = 373.0
margin_top = -581.0
margin_right = 953.0
margin_bottom = -400.0
custom_fonts/font = SubResource( 1 )
text = "Dragon"

[node name="Transition" type="Button" parent="."]
margin_left = -299.0
margin_top = -288.0
margin_right = 281.0
margin_bottom = -107.0
custom_fonts/font = SubResource( 1 )
text = "Falling"

[node name="Skeleton" type="Button" parent="."]
margin_left = -935.0
margin_top = 52.0
margin_right = -355.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 1 )
text = "Skeleton"

[node name="BatRat" type="Button" parent="."]
margin_left = -289.0
margin_top = 52.0
margin_right = 291.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 1 )
text = "BatRat"

[node name="KDJFKDS" type="Button" parent="."]
margin_left = 381.0
margin_top = 51.0
margin_right = 961.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 1 )
text = "KDJFKDS"

[node name="Back To Menu" type="Button" parent="."]
anchor_right = 0.136
anchor_bottom = 0.033
margin_left = -1279.0
margin_top = 580.0
margin_right = -812.264
margin_bottom = 759.9
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Back To Menu"

[node name="Player" type="Button" parent="."]
anchor_right = 0.136
anchor_bottom = 0.033
margin_left = -1283.0
margin_top = -756.0
margin_right = -1106.26
margin_bottom = -568.8
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Player"

[connection signal="pressed" from="Mage" to="." method="_on_Mage_pressed"]
[connection signal="pressed" from="Knight" to="." method="_on_Knight_pressed"]
[connection signal="pressed" from="Dragon" to="." method="_on_Dragon_pressed"]
[connection signal="pressed" from="Transition" to="." method="_on_Transition_pressed"]
[connection signal="pressed" from="Skeleton" to="." method="_on_Skeleton_pressed"]
[connection signal="pressed" from="BatRat" to="." method="_on_BatRat_pressed"]
[connection signal="pressed" from="KDJFKDS" to="." method="_on_KDJFKDS_pressed"]
[connection signal="pressed" from="Back To Menu" to="." method="_on_Back_To_Menu_pressed"]
[connection signal="pressed" from="Player" to="." method="_on_Player_pressed"]
